# seo-dashboard

./: .flake8  .gitignore  README.md  code-quality.php  composer.json  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: django.yml
app/: AppKernel.php
app/cache/dev/: appDevDebugProjectContainer.php  appDevDebugProjectContainer.xml
app/cache/dev/assetic/: routing.yml
app/config/: config.yml  parameters.yml.dist  routing.yml  security.yml
core/profiles/standard/: standard.profile
seodashboard/: __init__.py  asgi.py  settings.py  testsettings.py  urls.py  views.py  wsgi.py
sites/all/modules/custom/wiredpea_ga_api/: composer.json  wiredpea_ga_api.info  wiredpea_ga_api.module
sites/all/modules/custom/wiredpea_webmaster_api/: wiredpea_webmaster_api.info  wiredpea_webmaster_api.module
sites/all/themes/seodashboard/: seodashboard.info  template.php  theme-settings.php
src/WiredPea/FrontpageBundle/: WiredPeaFrontpageBundle.php
src/WiredPea/FrontpageBundle/Controller/: DefaultController.php
src/WiredPea/FrontpageBundle/DependencyInjection/: Configuration.php  WiredPeaFrontpageExtension.php
src/WiredPea/UserBundle/: WiredPeaUserBundle.php
src/WiredPea/UserBundle/Controller/: DefaultController.php
src/WiredPea/UserBundle/DependencyInjection/: Configuration.php  WiredPeaUserExtension.php
src/WiredPea/UserBundle/Entity/: Users.php
templates/: _base.html  index.html
theme/: __init__.py  apps.py
users/: __init__.py  admin.py  apps.py  managers.py  models.py  tests.py
users/migrations/: 0001_initial.py
(+8 files in other folders)
