[tool.poetry]
name = "seodashboard"
version = "0.1.0"
description = "A dashboard for your SEO related stuff"
authors = ["Noë Snaterse <noe@wiredpea.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
psycopg2 = "^2.9.9"
django-stubs = "^5.0.0"
djangorestframework = "^3.15.1"
djangorestframework-stubs = "^3.15.0"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
django-compressor = "^4.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
pylama = {extras = ["all"], version = "^8.4.1"}
coverage = "^7.5.0"
pytest-cov = "^5.0.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
